fix: remove scrollbar on mobile

--- a/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInputText.module.scss
+++ b/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInputText.module.scss
@@ -41,7 +41,7 @@
       font-size: var(--font-size-3);
       padding: 0px 36px 0px 16px;
       height: 40px;
-      line-height: 40px;
+      line-height: 38px;
       color: var(--font-color-main);
       border-radius: 20px;
 
@@ -51,4 +51,3 @@
     }
   }
 }
-
